force-app/main/default/objects/Territory__c/fields/Bump_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Bump_Date_Time__c</fullName>
    <description>Internally used to initiate a record update trigger</description>
    <label>Bump Date/Time</label>
    <type>DateTime</type>
</CustomField>