force-app/main/default/objects/Territory__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>Used to define geo-based territories</description>
    <label>Geo</label>
    <type>Address</type>
</CustomField>