force-app/main/default/objects/Territory__c/fields/State_Province_Formula__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Formula__c</fullName>
    <formula>TEXT(Geo__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>