force-app/main/default/objects/Territory__c/fields/Territory_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name_Formula__c</fullName>
    <formula>IF(TEXT(Type__c) = &apos;Zip&apos;,
&quot;Zip&quot; + &quot;-&quot; + TEXT(Geo__CountryCode__s) + &quot;-&quot; + TEXT(Geo__StateCode__s) + &quot;-&quot; + Geo__PostalCode__s,
IF(TEXT(Type__c) = &apos;City&apos;,
&quot;City&quot; + &quot;-&quot; + TEXT(Geo__CountryCode__s) + &quot;-&quot; + TEXT(Geo__StateCode__s) + &quot;-&quot; + Geo__City__s,
IF(TEXT(Type__c) = &apos;State/Province&apos;,
&quot;State/Province&quot; + &quot;-&quot; + TEXT(Geo__CountryCode__s) + &quot;-&quot; + TEXT(Geo__StateCode__s),
IF(TEXT(Type__c) = &apos;Country&apos;,
&quot;Country/Territory&quot; + &quot;-&quot; + TEXT(Geo__CountryCode__s),
&quot;TBD&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name Formula</label>
    <type>Text</type>
</CustomField>