force-app/main/default/objects/Territory__c/fields/Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>