force-app/main/default/objects/Territory__c/fields/Territory_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teams_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>