force-app/main/default/objects/Territory__c/fields/Territory_Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Username__c</fullName>
    <formula>Territory_Owner__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Username</label>
    <type>Text</type>
</CustomField>