force-app/main/default/objects/Territory__c/fields/xTerritory_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>xTerritory_Name_Formula__c</fullName>
    <formula>IF(
TEXT(Type__c) = &apos;Zip&apos;,
&quot;Zip&quot; + &quot;-&quot; + Zip_Code__c + &quot;-&quot; + Owner:User.FirstName + &quot; &quot; + Owner:User.LastName,
IF(
TEXT(Type__c) = &apos;City&apos;, 
&quot;City&quot; + &quot;-&quot; + City__c + &quot;-&quot; + Owner:User.FirstName + &quot; &quot; + Owner:User.LastName,
IF(
TEXT(Type__c) = &apos;State/Province&apos;, 
&quot;State/Province&quot; + &quot;-&quot; + StateProvince__c + &quot;-&quot; + Owner:User.FirstName + &quot; &quot; + Owner:User.LastName, 
IF(
TEXT(Type__c) = &apos;Country&apos;, &quot;Country&quot; + &quot;-&quot; + Country__c + &quot;-&quot; + Owner:User.FirstName + &quot; &quot; + Owner:User.LastName
,Owner:User.FirstName + &quot; &quot; + Owner:User.LastName
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xTerritory Name Formula</label>
    <type>Text</type>
</CustomField>