force-app/main/default/objects/Territory__c/fields/Zip_Postal_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code_Formula__c</fullName>
    <formula>Geo__PostalCode__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>