force-app/main/default/objects/Territory__c/validationRules/Type_is_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_is_Null</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Type must be set before Activating Territory</errorMessage>
</ValidationRule>