force-app/main/default/objects/Territory__c/listViews/Active_Territories.listView-meta.xml
<ListView>
    <fullName>Active_Territories</fullName>
    <columns>NAME</columns>
    <columns>Territory_Owner__c</columns>
    <columns>Type__c</columns>
    <columns>Territory_Owner_Name__c</columns>
    <columns>Territory_Owner_Manager__c</columns>
    <columns>Geo__CountryCode__s</columns>
    <columns>Geo__StateCode__s</columns>
    <columns>Geo__City__s</columns>
    <columns>Geo__PostalCode__s</columns>
    <columns>Territory_Owner_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Territories</label>
</ListView>