force-app/main/default/objects/Territory__c/listViews/Inactive_Owners.listView-meta.xml
<ListView>
    <fullName>Inactive_Owners</fullName>
    <columns>NAME</columns>
    <columns>Territory_Name_Formula__c</columns>
    <columns>Territory_Owner__c</columns>
    <columns>Geo__CountryCode__s</columns>
    <columns>Geo__StateCode__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Owner_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Owners</label>
</ListView>