force-app/main/default/objects/Territory__c/listViews/NH_Territories.listView-meta.xml
<ListView>
    <fullName>NH_Territories</fullName>
    <columns>NAME</columns>
    <columns>Territory_Name_Formula__c</columns>
    <columns>Territory_Owner__c</columns>
    <columns>Geo__CountryCode__s</columns>
    <columns>Geo__StateCode__s</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Province_Formula__c</field>
        <operation>equals</operation>
        <value>NH</value>
    </filters>
    <label>NH Territories</label>
</ListView>