force-app/main/default/objects/Territory__c/listViews/ROW_List.listView-meta.xml
<ListView>
    <fullName>ROW_List</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Geo__CountryCode__s</columns>
    <columns>Geo__StateCode__s</columns>
    <columns>Territory_Owner__c</columns>
    <columns>Territory_Owner_Manager__c</columns>
    <columns>Territory_Owner_Name__c</columns>
    <columns>Geo__City__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geo__CountryCode__s</field>
        <operation>notEqual</operation>
        <value>CA,MX,US</value>
    </filters>
    <label>ROW List</label>
</ListView>