force-app/main/default/objects/Territory__c/listViews/Type_Zip.listView-meta.xml
<ListView>
    <fullName>Type_Zip</fullName>
    <columns>NAME</columns>
    <columns>Territory_Owner__c</columns>
    <columns>Geo__CountryCode__s</columns>
    <columns>Geo__StateCode__s</columns>
    <columns>Geo__PostalCode__s</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Zip</value>
    </filters>
    <filters>
        <field>Geo__StateCode__s</field>
        <operation>equals</operation>
        <value>GA</value>
    </filters>
    <label>Type=Zip</label>
</ListView>